--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>VelaanX</title>
+    <link rel="icon" type="image/png" href="/logo.png" />
     <meta name="description" content="Connect directly with local farmers in your area. Buy fresh, organic produce and support sustainable farming in your community. Same-day delivery available." />
     <meta name="author" content="FarmFresh" />
     <meta name="keywords" content="farm, fresh produce, local farmers, organic, vegetables, fruits, delivery, sustainable farming" />
