google search added

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <meta name="description" content="Connect directly with local farmers in your area. Buy fresh, organic produce and support sustainable farming in your community. Same-day delivery available." />
     <meta name="author" content="FarmFresh" />
     <meta name="keywords" content="farm, fresh produce, local farmers, organic, vegetables, fruits, delivery, sustainable farming" />
-
+    <meta name="google-site-verification" content="INd7Wd9aJm8FbGEfjH5xrFmh0feODJUaPTppwb0xXEY" />
     <meta property="og:title" content="FarmFresh - Fresh Local Produce from Farmers Near You" />
     <meta property="og:description" content="Connect directly with local farmers. Buy fresh, organic produce and support sustainable farming." />
     <meta property="og:type" content="website" />
